third_party/blink/web_tests/external/wpt/keyboard-lock/idlharness.https.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS Keyboard interface: existence and properties of interface object
PASS Keyboard interface object length
PASS Keyboard interface object name
PASS Keyboard interface: existence and properties of interface prototype object
PASS Keyboard interface: existence and properties of interface prototype object's "constructor" property
PASS Keyboard interface: existence and properties of interface prototype object's @@unscopables property
PASS Keyboard interface: operation lock([object Object])
PASS Keyboard interface: operation unlock()
Harness: the test ran to completion.

